Colaboratory를 통해 생성됨

--- a/Arknights Story Translator.ipynb
+++ b/Arknights Story Translator.ipynb
@@ -6,7 +6,7 @@
       "name": "Arknights Story Translator v3.4 commentary.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNWPsTM04ZtdZ9j5TkHBZPd",
+      "authorship_tag": "ABX9TyP1IUiiaGBgrxP0uzJp2T9p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,7 +145,7 @@
         "# White is defined as brightness of 205~255\n",
         "white_error=50\n",
         "\n",
-        "#\n",
+        "# White pixel numbers change should be at least this value\n",
         "lab_error=1000\n",
         "\n",
         "# White pixel is defined as differ between min(BGR) and max(BGR) is under 10 \n",
